--- a/src/logo.mdx
+++ b/src/logo.mdx
@@ -5,4 +5,4 @@
 ███████║╚██████╗███████║
 ╚══════╝ ╚═════╝╚══════╝
 
-Welcome to Shortcut.Space! Type 'help' for available mmm.
+Welcome to Shortcut.Space! Type 'help' for available commands.
