--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -1,3 +1,7 @@
 # Vim
 
-comming soon...
+coming soon!
+
+| command                     | function |
+|-----------------------------|----------|
+|something                    |something |
