--- a/src/docs/about.mdx
+++ b/src/docs/about.mdx
@@ -1,1 +1,6 @@
-coming soon!
+This app is in development.
+
+Dependencies:
+- [ReactJS](https://reactjs.org)
+- [React-Terminal](https://github.com/bony2023/react-terminal)
+- [MDXJS](https://mdxjs.com)
