--- a/src/docs/help.mdx
+++ b/src/docs/help.mdx
@@ -1,7 +1,7 @@
-- about [about this app]
-- clear [clear screen]
-- help [show this helpfull message]
-- ls [List available shortcuts]
-- contribute [help me]
-- source [view source code]
-- tgifelix [authors website]
+- **about** [about this app]
+- **clear** [clear screen]
+- **help** [show this message]
+- **ls** [List shortcuts]
+- **contribute** [coming soon]
+- **source** [source code]
+- **tgifelix** [authors website]
