--- a/src/docs/ls.mdx
+++ b/src/docs/ls.mdx
@@ -1,6 +1,6 @@
-- vscode
-- vim
-- emacs
-- macos
+- **vscode**
+- **vim**
+- **emacs**
+- **macos**
 
-Like to add more? Type 'contribute' to help!
+> Like to add more? Type 'contribute' to help!
