--- a/src/docs/header.mdx
+++ b/src/docs/header.mdx
@@ -5,4 +5,5 @@
 ███████║╚██████╗███████║
 ╚══════╝ ╚═════╝╚══════╝
 
-Welcome to Shortcut.Space! Type 'help' for available commands.
+Welcome to Shortcut.Space!
+Type 'help' for available commands.
