--- a/src/docs/header.mdx
+++ b/src/docs/header.mdx
@@ -1,9 +1,2 @@
-███████╗ ██████╗███████╗
-██╔════╝██╔════╝██╔════╝
-███████╗██║     ███████╗
-╚════██║██║     ╚════██║
-███████║╚██████╗███████║
-╚══════╝ ╚═════╝╚══════╝
-
-Welcome to Shortcut.Space!
-Type 'help' for available commands.
+Welcome to 🚀shortcutSpace!
+Type 'help' to get started.
