--- a/src/docs/header.mdx
+++ b/src/docs/header.mdx
@@ -1,2 +1,4 @@
-Welcome to 🚀shortcutSpace!
-Type 'help' to get started.
++-----------------------------+
+| Welcome to shortcutSpace!   |
+| Type 'help' to get started. |
++-----------------------------+
