--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -2,4 +2,31 @@
 
 | Shortcut | Function |
 |:--|:--|
-| ESC | command mode |
+| **Main** |
+| esc | command mode |
+| . | repeat last command |
+| u |  undo |
+| ctrl+r | redo |
+| **Navigation** |
+| : [num] | jump to line number |
+| 0 | jump to start of line |
+| $ | jump to end of line |
+| gg | jump to top |
+| G | jump to bottom |
+| h | left |
+| j | down |
+| k | up |
+| l | right |
+| **Insert** |
+| i | insert at cursor |
+| I | insert at the beginning of the line |
+| o | insert blank line below current line |
+| O | insert blank line above current line |
+| cc | replace entire line |
+| **Cut & Paste** |
+| yy | yank (copy) line |
+| p | paste after cursor |
+| P | paste before cursor |
+| dd | delete line |
+
+> source: [vimsheet](https://vimsheet.com/)
