--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -39,6 +39,7 @@
 | N | previous search result |
 | **Tabs & window** |
 | :tabe | new tab |
+| :tabe <filename> | open file in new tab |
 | gt | next tab |
 | gT | previous tab |
 | ctrl+ws | split window horizontally |
