--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -5,7 +5,7 @@
 | . | repeat last command |
 | u |  undo |
 | ctrl+r | redo |
-| :x | save and quit |
+| :x | save and/or quit |
 | **Navigation** |
 | : [num] | jump to line number |
 | 0 | jump to start of line |
