--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -7,7 +7,7 @@
 | ctrl+r | redo |
 | :x | save and/or quit |
 | **Navigation** |
-| : [num] | jump to line number |
+| : `number` | jump to line number |
 | 0 | jump to start of line |
 | $ | jump to end of line |
 | gg | jump to top |
@@ -33,13 +33,13 @@
 | P | paste before cursor |
 | dd | delete line |
 | **Search** |
-| /text | search for text |
-| ?text | search backwards for text |
+| /`text` | search for text |
+| ?`text` | search backwards for text |
 | n | next search result |
 | N | previous search result |
 | **Tabs & window** |
 | :tabe | new tab |
-| :tabe <filename> | open file in new tab |
+| :tabe `filename` | open file in new tab |
 | gt | next tab |
 | gT | previous tab |
 | ctrl+ws | split window horizontally |
