--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -2,10 +2,12 @@
 |:--|:--|
 | **Main** |
 | esc | command mode |
+| :x | save and/or quit |
 | . | repeat last command |
 | u |  undo |
 | ctrl+r | redo |
-| :x | save and/or quit |
+| dw | delete word |
+| R | replace mode |
 | **Navigation** |
 | : `number` | jump to line number |
 | 0 | jump to start of line |
