--- a/src/docs/vscode.mdx
+++ b/src/docs/vscode.mdx
@@ -1,3 +1,10 @@
-# Visual Studio Code
-
-coming soon!
+| Shortcut | Function |
+|:--|:--|
+| shift+cmd+p | command pallete |
+| cmd+, | Settings |
+| ctrl+&acute; | toggle terminal |
+| cmd+b | hide/reveal sidebar |
+|  |  |
+|  |  |
+|  |  |
+|  |  |
