--- a/src/docs/help.mdx
+++ b/src/docs/help.mdx
@@ -4,4 +4,4 @@
 - **help** [show this message]
 - **contribute** [coming soon]
 - **source** [source code]
-- **tgifelix** [authors website]
+<!-- - **whois** [authors website] -->
