--- a/src/docs/about.mdx
+++ b/src/docs/about.mdx
@@ -1,4 +1,6 @@
-🚀 This app is in development. 
+🚀 This app is in development.
+
+The ultimate app for the keyboard shortcuts you will actually use! I've created this app as an open source project for the devcom to contribute to (coming soon).
 
 Dependencies:
 - [ReactJS](https://reactjs.org)
