--- a/src/docs/about.mdx
+++ b/src/docs/about.mdx
@@ -6,3 +6,7 @@ Dependencies:
 - [ReactJS](https://reactjs.org)
 - [React-Terminal](https://github.com/bony2023/react-terminal)
 - [MDXJS](https://mdxjs.com)
+
+
+![GitHub followers](https://img.shields.io/github/followers/tgifelix?style=for-the-badge)
+![GitHub last commit](https://img.shields.io/github/last-commit/tgifelix/shortcutspace?style=for-the-badge)
