--- a/src/docs/about.mdx
+++ b/src/docs/about.mdx
@@ -7,6 +7,5 @@ Dependencies:
 - [React-Terminal](https://github.com/bony2023/react-terminal)
 - [MDXJS](https://mdxjs.com)
 
-
-![GitHub followers](https://img.shields.io/github/followers/tgifelix?style=for-the-badge)
+![License](https://img.shields.io/github/license/tgifelix/shortcutspace?style=for-the-badge)
 ![GitHub last commit](https://img.shields.io/github/last-commit/tgifelix/shortcutspace?style=for-the-badge)
