--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -1,6 +1,6 @@
 | Shortcut | Function |
 |:--|:--|
-| **Main** |
+| **General** |
 | esc | command mode |
 | :x | save and/or quit |
 | . | repeat last command |
