--- a/src/docs/emacs.mdx
+++ b/src/docs/emacs.mdx
@@ -1,1 +1,44 @@
-coming soon!
+| shortcut | function |
+|:--|:--|
+| **general** |
+| ctrl+x, ctrl+f | open file |
+| ctrl+x, ctrl+s | save |
+| ctrl+x, ctrl+w | save as |
+| ctrl+x,s | save all |
+| ctrl+x, ctrl+v | revert to file |
+| meta+x | revert buffer |
+| ctrl+x, k | close window/buffer |
+| ctrl+x, ctrl+c | quit |
+| **edit** |
+| ctrl+_ | undo |
+| ctrl+space | begin selection |
+| ctrl+g | cancel selection |
+| meta+w | copy selection |
+| ctrl+w | cut selection |
+| ctrl+k | cut line |
+| ctrl+y | paste |
+| del | delete |
+| **movement** |
+| meta+f | word forward |
+| meta+b | word backward |
+| ctrl+a | jump to beginning of line |
+| ctrl+e | jump to end of line |
+| **search** |
+| ctrl+s | incremental search |
+| ctrl+r | incremental search reverse |
+| meta+ctrl+s | regexp incremental search |
+| meta+ctrl+r | regexp incremental search reverse |
+| meta+% | interactive search and replace |
+|  | goto line number |
+| meta+x `goto-line` | go to line number |
+| esc+ctrl+b | previous matching bracket |
+| esc+ctrl+f | next matching bracket |
+| **window** |
+| ctrl+x,k | close |
+| ctrl+x, b | next window |
+| ctrl+x, ctrl+b | choose window |
+| ctrl+x, 1 | maximize |
+| ctrl+x, 2 | split horizontal |
+| ctrl+x, 3 | split vertical |
+| ctrl+x, o | switch focus between windows |
+| meta+` | activate menu bar |
