--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -1,58 +1,56 @@
-| Shortcut | Function |
+| shortcut | function |
 |:--|:--|
-| **General** |
+| **general** |
 | esc | command mode |
 | :x | save and/or quit |
 | . | repeat last command |
 | u |  undo |
 | ctrl+r | redo |
 | dw | delete word |
-| R | replace mode |
-| **Insert** |
+| r | replace mode |
+| **insert** |
 | i | insert at cursor |
-| I | insert at the beginning of the line |
+| i | insert at the beginning of the line |
 | o | insert line below current line |
-| O | insert line above current line |
+| o | insert line above current line |
 | cc | replace entire line |
-| **Navigation** |
+| **navigation** |
 | : `number` | jump to line number |
 | 0 | jump to start of line |
 | $ | jump to end of line |
 | gg | jump to top |
-| G | jump to bottom |
+| g | jump to bottom |
 | h | left |
 | j | down |
 | k | up |
 | l | right |
-| **Visual Mode** |
+| **visual mode** |
 | v | visual mode |
 | ctrl+v | visual block mode | 
 | y | yank (copy) marked text |
 | d | delete marked text |
-| **Cut & Paste** |
+| **cut & paste** |
 | yy | yank (copy) line |
 | p | paste after cursor |
-| P | paste before cursor |
+| p | paste before cursor |
 | dd | delete line |
-| **Search** |
+| **search** |
 | /`text` | search for text |
 | ?`text` | search backwards for text |
 | n | next search result |
-| N | previous search result |
-| **Tabs & window** |
+| n | previous search result |
+| **tabs & window** |
 | :tabe | new tab |
 | :tabe `filename` | open file in new tab |
 | gt | next tab |
-| gT | previous tab |
+| gt | previous tab |
 | ctrl+ws | split window horizontally |
 | ctrl+wv | split window vertically |
 | ctrl+ww | switch between windows |
 | ctrl+wq | close window |
-| **Save & Exit** |
+| **save & exit** |
 | :w | save (write) |
 | :wq | save and quit |
 | :x | save and quit |
 | :q | quit |
 | :q! | quit without saving |
-
-source: [Vim Docs](https://www.vim.org/docs.php)
