--- a/src/docs/emacs.mdx
+++ b/src/docs/emacs.mdx
@@ -1,6 +1,7 @@
+### general
+
 | shortcut | function |
 |:--|:--|
-| **general** |
 | ctrl+x, ctrl+f | open file |
 | ctrl+x, ctrl+s | save |
 | ctrl+x, ctrl+w | save as |
@@ -9,7 +10,10 @@
 | meta+x | revert buffer |
 | ctrl+x, k | close window/buffer |
 | ctrl+x, ctrl+c | quit |
-| **edit** |
+
+### edit
+| shortcut | function |
+|:--|:--|
 | ctrl+_ | undo |
 | ctrl+space | begin selection |
 | ctrl+g | cancel selection |
@@ -18,12 +22,18 @@
 | ctrl+k | cut line |
 | ctrl+y | paste |
 | del | delete |
-| **movement** |
+
+### movement
+| shortcut | function |
+|:--|:--|
 | meta+f | word forward |
 | meta+b | word backward |
 | ctrl+a | jump to beginning of line |
 | ctrl+e | jump to end of line |
-| **search** |
+
+### search
+| shortcut | function |
+|:--|:--|
 | ctrl+s | incremental search |
 | ctrl+r | incremental search reverse |
 | meta+ctrl+s | regexp incremental search |
@@ -33,7 +43,10 @@
 | meta+x `goto-line` | go to line number |
 | esc+ctrl+b | previous matching bracket |
 | esc+ctrl+f | next matching bracket |
-| **window** |
+
+### window
+| shortcut | function |
+|:--|:--|
 | ctrl+x,k | close |
 | ctrl+x, b | next window |
 | ctrl+x, ctrl+b | choose window |
