--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -1,6 +1,7 @@
+### general
+
 | shortcut | function |
 |:--|:--|
-| **general** |
 | esc | command mode |
 | :x | save and/or quit |
 | . | repeat last command |
@@ -8,13 +9,19 @@
 | ctrl+r | redo |
 | dw | delete word |
 | r | replace mode |
-| **insert** |
+
+### insert
+| shortcut | function |
+|:--|:--|
 | i | insert at cursor |
 | i | insert at the beginning of the line |
 | o | insert line below current line |
 | o | insert line above current line |
 | cc | replace entire line |
-| **navigation** |
+
+### navigation
+| shortcut | function |
+|:--|:--|
 | : `number` | jump to line number |
 | 0 | jump to start of line |
 | $ | jump to end of line |
@@ -24,22 +31,35 @@
 | j | down |
 | k | up |
 | l | right |
-| **visual mode** |
+
+### visual mode
+| shortcut | function |
+|:--|:--|
 | v | visual mode |
 | ctrl+v | visual block mode | 
 | y | yank (copy) marked text |
 | d | delete marked text |
-| **cut & paste** |
+
+### cut & paste
+| shortcut | function |
+|:--|:--|
 | yy | yank (copy) line |
 | p | paste after cursor |
 | p | paste before cursor |
 | dd | delete line |
-| **search** |
+
+### search
+| shortcut | function |
+|:--|:--|
 | /`text` | search for text |
 | ?`text` | search backwards for text |
 | n | next search result |
 | n | previous search result |
-| **tabs & window** |
+
+
+### tabs & windows
+| shortcut | function |
+|:--|:--|
 | :tabe | new tab |
 | :tabe `filename` | open file in new tab |
 | gt | next tab |
@@ -48,7 +68,10 @@
 | ctrl+wv | split window vertically |
 | ctrl+ww | switch between windows |
 | ctrl+wq | close window |
-| **save & exit** |
+
+### save & exit
+| shortcut | function |
+|:--|:--|
 | :w | save (write) |
 | :wq | save and quit |
 | :x | save and quit |
