--- a/src/docs/emacs.mdx
+++ b/src/docs/emacs.mdx
@@ -1,7 +1,5 @@
-### general
-
-| shortcut | function |
-|:--|:--|
+| general | |
+| --- | --- |
 | ctrl+x, ctrl+f | open file |
 | ctrl+x, ctrl+s | save |
 | ctrl+x, ctrl+w | save as |
@@ -11,9 +9,8 @@
 | ctrl+x, k | close window/buffer |
 | ctrl+x, ctrl+c | quit |
 
-### edit
-| shortcut | function |
-|:--|:--|
+| edit | |
+| --- | --- |
 | ctrl+_ | undo |
 | ctrl+space | begin selection |
 | ctrl+g | cancel selection |
@@ -23,17 +20,15 @@
 | ctrl+y | paste |
 | del | delete |
 
-### movement
-| shortcut | function |
-|:--|:--|
+| movement | |
+| --- | --- |
 | meta+f | word forward |
 | meta+b | word backward |
 | ctrl+a | jump to beginning of line |
 | ctrl+e | jump to end of line |
 
-### search
-| shortcut | function |
-|:--|:--|
+| search | |
+| --- | --- |
 | ctrl+s | incremental search |
 | ctrl+r | incremental search reverse |
 | meta+ctrl+s | regexp incremental search |
@@ -43,9 +38,8 @@
 | esc+ctrl+b | previous matching bracket |
 | esc+ctrl+f | next matching bracket |
 
-### window
-| shortcut | function |
-|:--|:--|
+| window | |
+| --- | --- |
 | ctrl+x,k | close |
 | ctrl+x, b | next window |
 | ctrl+x, ctrl+b | choose window |
@@ -53,4 +47,3 @@
 | ctrl+x, 2 | split horizontal |
 | ctrl+x, 3 | split vertical |
 | ctrl+x, o | switch focus between windows |
-| meta+` | activate menu bar |
