--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -1,7 +1,5 @@
-### general
-
-| shortcut | function |
-|:--|:--|
+| general |  |
+|---|---|
 | esc | command mode |
 | :x | save and/or quit |
 | . | repeat last command |
@@ -10,18 +8,16 @@
 | dw | delete word |
 | r | replace mode |
 
-### insert
-| shortcut | function |
-|:--|:--|
+| insert |  |
+|---|---|
 | i | insert at cursor |
 | i | insert at the beginning of the line |
 | o | insert line below current line |
 | o | insert line above current line |
 | cc | replace entire line |
 
-### navigation
-| shortcut | function |
-|:--|:--|
+| navigation |  |
+|---|---|
 | : `number` | jump to line number |
 | 0 | jump to start of line |
 | $ | jump to end of line |
@@ -32,34 +28,29 @@
 | k | up |
 | l | right |
 
-### visual mode
-| shortcut | function |
-|:--|:--|
+| visual mode |  |
+|---|---|
 | v | visual mode |
 | ctrl+v | visual block mode | 
 | y | yank (copy) marked text |
 | d | delete marked text |
 
-### cut & paste
-| shortcut | function |
-|:--|:--|
+| cut & paste |  |
+|---|---|
 | yy | yank (copy) line |
 | p | paste after cursor |
 | p | paste before cursor |
 | dd | delete line |
 
-### search
-| shortcut | function |
-|:--|:--|
+| search |  |
+|---|---|
 | /`text` | search for text |
 | ?`text` | search backwards for text |
 | n | next search result |
 | n | previous search result |
 
-
-### tabs & windows
-| shortcut | function |
-|:--|:--|
+| tabs & windows |  |
+|---|---|
 | :tabe | new tab |
 | :tabe `filename` | open file in new tab |
 | gt | next tab |
@@ -69,9 +60,8 @@
 | ctrl+ww | switch between windows |
 | ctrl+wq | close window |
 
-### save & exit
-| shortcut | function |
-|:--|:--|
+| save & exit |  |
+|---|---|
 | :w | save (write) |
 | :wq | save and quit |
 | :x | save and quit |
