--- a/src/docs/ls.mdx
+++ b/src/docs/ls.mdx
@@ -1,6 +1,6 @@
 - **vim**
+- **emacs**
 - **vscode** [coming soon]
-- **emacs** [coming soon]
 - **macos** [coming soon]
 
 > Like to add more? Type 'contribute' to help!
