--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -6,14 +6,14 @@
 | u |  undo |
 | ctrl+r | redo |
 | dw | delete word |
-| r | replace mode |
+| R | replace mode |
 
 | insert |  |
 |---|---|
 | i | insert at cursor |
-| i | insert at the beginning of the line |
+| I | insert at the beginning of the line |
 | o | insert line below current line |
-| o | insert line above current line |
+| O | insert line above current line |
 | cc | replace entire line |
 
 | navigation |  |
@@ -22,7 +22,7 @@
 | 0 | jump to start of line |
 | $ | jump to end of line |
 | gg | jump to top |
-| g | jump to bottom |
+| G | jump to bottom |
 | h | left |
 | j | down |
 | k | up |
@@ -39,7 +39,7 @@
 |---|---|
 | yy | yank (copy) line |
 | p | paste after cursor |
-| p | paste before cursor |
+| P | paste before cursor |
 | dd | delete line |
 
 | search |  |
@@ -47,14 +47,14 @@
 | /`text` | search for text |
 | ?`text` | search backwards for text |
 | n | next search result |
-| n | previous search result |
+| N | previous search result |
 
 | tabs & windows |  |
 |---|---|
 | :tabe | new tab |
 | :tabe `filename` | open file in new tab |
 | gt | next tab |
-| gt | previous tab |
+| gT | previous tab |
 | ctrl+ws | split window horizontally |
 | ctrl+wv | split window vertically |
 | ctrl+ww | switch between windows |
