--- a/src/docs/vim.mdx
+++ b/src/docs/vim.mdx
@@ -1,4 +1,4 @@
-| general |  |
+| general |
 |---|---|
 | esc | command mode |
 | :x | save and/or quit |
@@ -8,7 +8,7 @@
 | dw | delete word |
 | R | replace mode |
 
-| insert |  |
+| insert |
 |---|---|
 | i | insert at cursor |
 | I | insert at the beginning of the line |
@@ -16,7 +16,7 @@
 | O | insert line above current line |
 | cc | replace entire line |
 
-| navigation |  |
+| navigation |
 |---|---|
 | : `number` | jump to line number |
 | 0 | jump to start of line |
@@ -28,28 +28,28 @@
 | k | up |
 | l | right |
 
-| visual mode |  |
+| visual mode |
 |---|---|
 | v | visual mode |
 | ctrl+v | visual block mode | 
 | y | yank (copy) marked text |
 | d | delete marked text |
 
-| cut & paste |  |
+| cut & paste |
 |---|---|
 | yy | yank (copy) line |
 | p | paste after cursor |
 | P | paste before cursor |
 | dd | delete line |
 
-| search |  |
+| search |
 |---|---|
 | /`text` | search for text |
 | ?`text` | search backwards for text |
 | n | next search result |
 | N | previous search result |
 
-| tabs & windows |  |
+| tabs & windows |
 |---|---|
 | :tabe | new tab |
 | :tabe `filename` | open file in new tab |
@@ -60,7 +60,7 @@
 | ctrl+ww | switch between windows |
 | ctrl+wq | close window |
 
-| save & exit |  |
+| save & exit |
 |---|---|
 | :w | save (write) |
 | :wq | save and quit |
