--- a/src/docs/emacs.mdx
+++ b/src/docs/emacs.mdx
@@ -1,4 +1,4 @@
-| general | |
+| general |
 | --- | --- |
 | ctrl+x, ctrl+f | open file |
 | ctrl+x, ctrl+s | save |
@@ -9,7 +9,7 @@
 | ctrl+x, k | close window/buffer |
 | ctrl+x, ctrl+c | quit |
 
-| edit | |
+| edit |
 | --- | --- |
 | ctrl+_ | undo |
 | ctrl+space | begin selection |
@@ -20,14 +20,14 @@
 | ctrl+y | paste |
 | del | delete |
 
-| movement | |
+| movement |
 | --- | --- |
 | meta+f | word forward |
 | meta+b | word backward |
 | ctrl+a | jump to beginning of line |
 | ctrl+e | jump to end of line |
 
-| search | |
+| search |
 | --- | --- |
 | ctrl+s | incremental search |
 | ctrl+r | incremental search reverse |
@@ -38,7 +38,7 @@
 | esc+ctrl+b | previous matching bracket |
 | esc+ctrl+f | next matching bracket |
 
-| window | |
+| window |
 | --- | --- |
 | ctrl+x,k | close |
 | ctrl+x, b | next window |
