added discord link

--- a/src/lib/contribute.mdx
+++ b/src/lib/contribute.mdx
@@ -5,7 +5,11 @@ Looking to contribute? That's awesome!
 1. fork [this repo](https://github.com/TGIFelix/shortcutspace)
 2. clone locally: `git clone https://github.com/<yourusername>/shortcutspace`
 3. create a new branch: `git checkout -b <branchname>`
-4. add shortcuts to `docs` folder
-5. commit changes: `git commit --all -m "add: <NAME>"`
+4. add shortcuts to `src/docs` folder
+5. commit changes: `git commit --all -m "add: <name>"`
 6. push to your fork: `git push origin <branchname>`
 7. create pull request
+
+The `<branchname>` and `<name>` are what you will like to add shortcuts for, i.e.: `git checkout -b vim` and `git commit --all -m "add: vim`.
+
+Questions? [Join us on discord](https://discord.com/channels/816685420724748309)
